{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 53,
  "lineage": "cc4aa624-9559-1e1d-6b36-476f6b86efd4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "extraction_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:241533149472:transit-gateway-attachment/tgw-attach-0bed724c2d6a6379e",
            "dns_support": "enable",
            "id": "tgw-attach-0bed724c2d6a6379e",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-05c832fbe031837ff",
              "subnet-0feb8d421cef75592"
            ],
            "tags": {
              "Name": "extraction-production-tgw-attachment"
            },
            "tags_all": {
              "Name": "extraction-production-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0681064c35feff4c5",
            "vpc_id": "vpc-0e7cd0d76b7b64f04",
            "vpc_owner_id": "241533149472"
          },
          "dependencies": [
            "aws_subnet.sn-tgw-core-1",
            "aws_subnet.sn-tgw-core-2",
            "aws_vpc.extraction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0516396baf1b29d26",
            "arn": "arn:aws:ec2:us-east-1:241533149472:elastic-ip/eipalloc-0516396baf1b29d26",
            "association_id": "eipassoc-0c959cec4095ce23b",
            "domain": "vpc",
            "id": "eipalloc-0516396baf1b29d26",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05cf1363590d2ed37",
            "private_dns": "ip-10-162-32-244.ec2.internal",
            "private_ip": "10.162.32.244",
            "public_dns": "ec2-107-22-191-2.compute-1.amazonaws.com",
            "public_ip": "107.22.191.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-1-production"
            },
            "tags_all": {
              "Name": "nat-eip-1-production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01768604858c6420d",
            "arn": "arn:aws:ec2:us-east-1:241533149472:elastic-ip/eipalloc-01768604858c6420d",
            "association_id": "eipassoc-02f4513c042d3c313",
            "domain": "vpc",
            "id": "eipalloc-01768604858c6420d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0103cd4abdf0215e7",
            "private_dns": "ip-10-162-48-250.ec2.internal",
            "private_ip": "10.162.48.250",
            "public_dns": "ec2-18-214-187-92.compute-1.amazonaws.com",
            "public_ip": "18.214.187.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-2-production"
            },
            "tags_all": {
              "Name": "nat-eip-2-production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "extraction_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:internet-gateway/igw-009a6073f977db648",
            "id": "igw-009a6073f977db648",
            "owner_id": "241533149472",
            "tags": {
              "Name": "extraction-igw-production"
            },
            "tags_all": {
              "Name": "extraction-igw-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0516396baf1b29d26",
            "association_id": "eipassoc-0c959cec4095ce23b",
            "connectivity_type": "public",
            "id": "nat-05a0f667d6f727d40",
            "network_interface_id": "eni-05cf1363590d2ed37",
            "private_ip": "10.162.32.244",
            "public_ip": "107.22.191.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06753e3c0f9ae894e",
            "tags": {
              "Name": "nat-gw-1-production"
            },
            "tags_all": {
              "Name": "nat-gw-1-production"
            }
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.extraction_igw",
            "aws_subnet.sn-ngw-1",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01768604858c6420d",
            "association_id": "eipassoc-02f4513c042d3c313",
            "connectivity_type": "public",
            "id": "nat-001eae90fd220e471",
            "network_interface_id": "eni-0103cd4abdf0215e7",
            "private_ip": "10.162.48.250",
            "public_ip": "18.214.187.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c92e9e72f7bcc5d8",
            "tags": {
              "Name": "nat-gw-2-production"
            },
            "tags_all": {
              "Name": "nat-gw-2-production"
            }
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.extraction_igw",
            "aws_subnet.sn-ngw-2",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a4892905ab2c7a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05a0f667d6f727d40",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a4892905ab2c7a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.extraction_igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.timescalert",
            "aws_subnet.sn-ngw-1",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "timescalert_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.162.0.0/23",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a4892905ab2c7a12084175025",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a4892905ab2c7a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0681064c35feff4c5",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.timescalert",
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "timescalert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:route-table/rtb-05a4892905ab2c7a1",
            "id": "rtb-05a4892905ab2c7a1",
            "owner_id": "241533149472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05a0f667d6f727d40",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.127.224.0/19",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0681064c35feff4c5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.162.0.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0681064c35feff4c5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.162.64.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0681064c35feff4c5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-data-extraction-rt-private"
            },
            "tags_all": {
              "Name": "staging-data-extraction-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-dialog-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0833082e9163c6883",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.34.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0833082e9163c6883",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-dialog-lambda-1-production"
            },
            "tags_all": {
              "Name": "sn-dialog-lambda-1-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-dialog-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0ea1d0a82e8c9a30a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.50.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea1d0a82e8c9a30a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-dialog-lambda-2-production"
            },
            "tags_all": {
              "Name": "sn-dialog-lambda-2-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-inet-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-09cb54b7b1693cb43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.44.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cb54b7b1693cb43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-inet-lambda-1-production"
            },
            "tags_all": {
              "Name": "sn-inet-lambda-1-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-inet-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-01301ea02a047133c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01301ea02a047133c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-inet-lambda-2-production"
            },
            "tags_all": {
              "Name": "sn-inet-lambda-2-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-mwaa-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0334bf5f89320d03a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.47.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0334bf5f89320d03a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-mwaa-1-production"
            },
            "tags_all": {
              "Name": "sn-mwaa-1-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-mwaa-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-070b23e7e42358c05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.63.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070b23e7e42358c05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-mwaa-2-production"
            },
            "tags_all": {
              "Name": "sn-mwaa-2-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-ngw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-06753e3c0f9ae894e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.32.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06753e3c0f9ae894e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-ngw-1-production"
            },
            "tags_all": {
              "Name": "sn-ngw-1-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-ngw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0c92e9e72f7bcc5d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.48.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c92e9e72f7bcc5d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-ngw-2-production"
            },
            "tags_all": {
              "Name": "sn-ngw-2-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-privatelink-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0a09e6acb50b3f032",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.32.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a09e6acb50b3f032",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-privatelink-1-production"
            },
            "tags_all": {
              "Name": "sn-privatelink-1-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-privatelink-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0d80550c043e305ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.48.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d80550c043e305ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-privatelink-2-production"
            },
            "tags_all": {
              "Name": "sn-privatelink-2-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-tgw-core-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-05c832fbe031837ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.32.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c832fbe031837ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-tgw-core-1-production"
            },
            "tags_all": {
              "Name": "sn-tgw-core-1-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-tgw-core-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0feb8d421cef75592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.36.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0feb8d421cef75592",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-tgw-core-2-production"
            },
            "tags_all": {
              "Name": "sn-tgw-core-2-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-versa-lambda-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-03c73b073f2affcd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.34.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c73b073f2affcd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-versa-lambda-1-production"
            },
            "tags_all": {
              "Name": "sn-versa-lambda-1-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-versa-lambda-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:subnet/subnet-0d0253621214d4fb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.162.50.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0253621214d4fb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533149472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-versa-lambda-2-production"
            },
            "tags_all": {
              "Name": "sn-versa-lambda-2-production"
            },
            "vpc_id": "vpc-0e7cd0d76b7b64f04"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "extraction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533149472:vpc/vpc-0e7cd0d76b7b64f04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.162.32.0/19",
            "default_network_acl_id": "acl-093ac50d88044cd2d",
            "default_route_table_id": "rtb-087784022543ab157",
            "default_security_group_id": "sg-0d92bbf38cf332a58",
            "dhcp_options_id": "dopt-0c33a873375db2ae5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7cd0d76b7b64f04",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087784022543ab157",
            "owner_id": "241533149472",
            "tags": {
              "Name": "extraction-production"
            },
            "tags_all": {
              "Name": "extraction-production"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}